--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "three": "^0.148.0"
   },
   "devDependencies": {
